[gd_scene load_steps=8 format=3 uid="uid://onakfeeso4o2"]

[ext_resource type="FontFile" path="res://Vyfrost/Assets/Font/RedHatMono/MenuFont_default.tres" id="1"]
[ext_resource type="Script" path="res://Vyfrost/Components/PauseMenu/PauseMenuButton.gd" id="3"]

[sub_resource type="StyleBoxFlat" id="5"]
content_margin_left = 8.0
content_margin_top = 8.0
content_margin_right = 8.0
content_margin_bottom = 8.0
bg_color = Color(0.584314, 0.909804, 0.972549, 0.0823529)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.584314, 0.909804, 0.972549, 0.486275)

[sub_resource type="StyleBoxFlat" id="1"]
content_margin_left = 8.0
content_margin_top = 8.0
content_margin_right = 8.0
content_margin_bottom = 8.0
bg_color = Color(0.584314, 0.909804, 0.972549, 0.105882)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.584314, 0.909804, 0.972549, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="2"]
content_margin_left = 8.0
content_margin_top = 8.0
content_margin_right = 8.0
content_margin_bottom = 8.0
bg_color = Color(0.584314, 0.909804, 0.972549, 0.337255)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.584314, 0.909804, 0.972549, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="3"]
content_margin_left = 8.0
content_margin_top = 8.0
content_margin_right = 8.0
content_margin_bottom = 8.0
bg_color = Color(0.584314, 0.909804, 0.972549, 0)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.584314, 0.909804, 0.972549, 0.258824)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxEmpty" id="6"]

[node name="PauseMenuButton" type="Button"]
offset_right = 134.0
offset_bottom = 28.0
mouse_default_cursor_shape = 2
theme_override_fonts/font = ExtResource("1")
theme_override_styles/normal = SubResource("5")
theme_override_styles/hover = SubResource("1")
theme_override_styles/pressed = SubResource("2")
theme_override_styles/disabled = SubResource("3")
theme_override_styles/focus = SubResource("6")
text = "Continue"
flat = true
script = ExtResource("3")

[connection signal="focus_entered" from="." to="." method="_on_MenuButton_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_MenuButton_focus_exited"]
[connection signal="mouse_entered" from="." to="." method="_on_MenuButton_mouse_entered"]
